[package]
name = "serial-port-multiplexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serial_mux"
path = "src/lib.rs"

[[bin]]
name = "mux-serial-server"
path = "src/mux_serial_server.rs"

[[bin]]
name = "mux-serial-client"
path = "src/mux_serial_client.rs"

[dependencies.nix]
version = "0.26.1"

[dependencies.bincode]
version = "1.3.3"

[dependencies.bytes]
version = "1.3.0"

[dependencies.clap]
version = "4.0.29"
features = ["derive"]

[dependencies.futures]
version = "0.3.25"

[dependencies.serde]
version = "1.0.148"
features = ["derive"]

[dependencies.tokio]
version = "1.23.0"
features = ["full"]

[dependencies.tokio-serial]
git = "https://github.com/AndreyLalaev/tokio-serial.git"
rev = "6ed7de04bf35e88b1d4179232e3295c0416717f8"
features = ["codec"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["codec"]
